--- a/public/index.html
+++ b/public/index.html
@@ -26,3 +26,4 @@ how to share file with no login
 
 <!-- Update Description to include them -->
 <meta name="description" content="A powerful alternative to dontpad with secure no-login storage. Instantly store and retrieve messages or files using a secret code. No signup required!" />
+<meta name="google-site-verification" content="fWtItc8WclYM_jkfaGi7x6LIBYpb6BXJgjuURqZfpuM" />
