--- a/public/index.html
+++ b/public/index.html
@@ -1,29 +1,43 @@
-<!-- Updated Meta Keywords -->
-<meta name="keywords" content="
-dontpad,
-nologin,
-no login required,
-secure storage no login,
-instant message saving,
-file locker no login,
-alternative to dontpad,
-alternative to nologin,
-secret message vault,
-store notes like dontpad,
-dontpad alternative,
-nologin alternative,
-temporary file storage,
-save message instantly,
-no registration locker,
-file share,
-https://www.nologin.in/,
-https://dontpad.com/,
-nologin.in,
-dontpad.com,
-how to share file without log in,
-how to share file with no login
-" />
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<!-- Update Description to include them -->
-<meta name="description" content="A powerful alternative to dontpad with secure no-login storage. Instantly store and retrieve messages or files using a secret code. No signup required!" />
-<meta name="google-site-verification" content="fWtItc8WclYM_jkfaGi7x6LIBYpb6BXJgjuURqZfpuM" />
+    <!-- Google Search Console Verification -->
+    <meta name="google-site-verification" content="fWtItc8WclYM_jkfaGi7x6LIBYpb6BXJgjuURqZfpuM" />
+
+    <!-- SEO Meta Tags -->
+    <meta name="description" content="A powerful alternative to dontpad with secure no-login storage. Instantly store and retrieve messages or files using a secret code. No signup required!" />
+    <meta name="keywords" content="
+      dontpad,
+      nologin,
+      no login required,
+      secure storage no login,
+      instant message saving,
+      file locker no login,
+      alternative to dontpad,
+      alternative to nologin,
+      secret message vault,
+      store notes like dontpad,
+      dontpad alternative,
+      nologin alternative,
+      temporary file storage,
+      save message instantly,
+      no registration locker,
+      file share,
+      https://www.nologin.in/,
+      https://dontpad.com/,
+      nologin.in,
+      dontpad.com,
+      how to share file without log in,
+      how to share file with no login
+    " />
+
+    <title>Locker</title>
+    <!-- other head content like favicon, etc. -->
+  </head>
+  <body>
+    <div id="root"></div>
+  </body>
+</html>
