--- a/public/index.html
+++ b/public/index.html
@@ -1,29 +1,44 @@
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <!-- ✅ Google Search Console Verification -->
-  <meta name="google-site-verification" content="fWtItc8WclYM_jkfaGi7x6LIBYpb6BXJgjuURqZfpuM" />
+    <!-- Google Search Console Verification -->
+     <meta name="google-site-verification" content="fWtItc8WclYM_jkfaGi7x6LIBYpb6BXJgjuURqZfpuM" />
 
-  <!-- ✅ SEO Meta Tags -->
-  <title>LockerAlpha – Secure File & Message Locker (No Login)</title>
-  <meta name="description" content="LockerAlpha is a powerful alternative to dontpad with secure no-login storage. Instantly store and retrieve messages or files using a secret code. No signup required!" />
-  <meta name="keywords" content="dontpad, nologin, secure storage, file locker, no login file share, secret message vault, temporary storage, lockeralpha, text locker, save files online, anonymous locker" />
-  <meta name="author" content="LockerAlpha" />
+    <!-- SEO Meta Tags -->
+    <meta name="description" content="A powerful alternative to dontpad with secure no-login storage. Instantly store and retrieve messages or files using a secret code. No signup required!" />
+    <meta name="keywords" content="
+      dontpad,
+      nologin,
+      no login required,
+      secure storage no login,
+      instant message saving,
+      file locker no login,
+      alternative to dontpad,
+      alternative to nologin,
+      secret message vault,
+      store notes like dontpad,
+      dontpad alternative,
+      nologin alternative,
+      temporary file storage,
+      save message instantly,
+      no registration locker,
+      file share,
+      https://www.nologin.in/,
+      https://dontpad.com/,
+      nologin.in,
+      dontpad.com,
+      how to share file without log in,
+      how to share file with no login
+    " />
 
-  <!-- ✅ Open Graph (for Google, Facebook) -->
-  <meta property="og:title" content="LockerAlpha – Secure File & Message Locker" />
-  <meta property="og:description" content="No-login locker for instantly saving and retrieving text messages and files using secret codes." />
-  <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://lockeralpha.netlify.app/" />
-  <meta property="og:site_name" content="LockerAlpha" />
-  <meta property="og:image" content="https://lockeralpha.netlify.app/locker-preview.png" /> <!-- Optional: add preview image -->
-
-  <!-- ✅ Twitter Card -->
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="LockerAlpha – Save Files & Messages Instantly" />
-  <meta name="twitter:description" content="No login required. Secret-code-based locker for files and text." />
-
-  <!-- ✅ Favicon -->
-  <link rel="icon" type="image/png" href="/locker.png" />
-</head>
+    <title>Locker</title>
+    <!-- other head content like favicon, etc. -->
+  </head>
+  <body>
+    <div id="root"></div>
+  </body>
+</html>
+index.html
